--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0
 dash==1.20.0
+dash-bootstrap-components==0.12.0
 dash-core-components==1.16.0
 dash-daq==0.5.0
 dash-html-components==1.1.3
@@ -26,12 +27,16 @@ Jinja2==2.11.3
 lockfile==0.12.2
 MarkupSafe==1.1.1
 msgpack==0.6.2
+numpy==1.20.2
 packaging==20.3
+pandas==1.2.4
 pep517==0.8.2
 plotly==4.14.3
 progress==1.5
 pyparsing==2.4.6
+python-dateutil==2.8.1
 pytoml==0.1.21
+pytz==2021.1
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
